--- a/package.json
+++ b/package.json
@@ -32,19 +32,16 @@
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.24",
     "@reduxjs/toolkit": "^2.8.2",
-
     "@tiptap/extension-bold": "^2.1.13",
     "@tiptap/extension-bullet-list": "^2.1.13",
     "@tiptap/extension-italic": "^2.1.13",
     "@tiptap/extension-list-item": "^2.1.13",
     "@tiptap/extension-ordered-list": "^2.1.13",
     "@tiptap/extension-strike": "^2.1.13",
-
     "@tiptap/extension-underline": "^2.22.3",
     "@tiptap/pm": "^2.22.3",
     "@tiptap/react": "^2.22.3",
     "@tiptap/starter-kit": "^2.22.3",
-    
     "axios": "^1.10.0",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
@@ -64,7 +61,7 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.30.0",
-    "@types/node": "22.15.3",
+    "@types/node": "^22.15.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
